# HFR_PACKAGE

./: LICENSE  README.md  __init__.py  compute_multiple.py  compute_single.py  environment.yml  hfr_driver.py  pyproject.toml  run_folder.py  run_multiple.py  run_unique.py
hfrpkg/: cli.py  compute_folder.py  compute_single.py  read_optsum.py  run_single  run_single.py  run_spec  run_spec.py  runner.py  spec_compute.py  spec_folder_compute  spec_folder_compute.py  utils.py  write_data.py
hfrpkg/multi/: comp.py  compute_folder.py  compute_multiple.py  fill.py  grab_unique.py  hfr_driver.py  multi_spec.py  multi_spec_prep.py  run_unique.py  unique_spec.py  write_data.py  write_summaries
